--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   go_router: ^14.8.1
   flutter_screenutil: ^5.9.3
   get_it: ^8.0.3
+  google_fonts: ^6.2.1
 
 dev_dependencies:
   flutter_test:
