--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   equatable: ^2.0.7
   flutter_svg: ^2.0.17
   font_awesome_flutter: ^10.8.0
+  firebase_core: ^3.12.1
+  firebase_auth: ^5.5.1
 
 dev_dependencies:
   flutter_test:
