--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -26,3 +26,37 @@ linter:
 
 # Additional information about this file can be found at
 # https://dart.dev/guides/language/analysis-options
+avoid_print: true
+prefer_const_constructors: true
+prefer_const_literals_to_create_immutables: true
+avoid_unnecessary_containers: true
+use_key_in_widget_constructors: true
+prefer_final_fields: true
+avoid_redundant_argument_values: true
+prefer_typing_uninitialized_variables: true
+avoid_setters_without_getters: true
+prefer_expression_function_bodies: true
+avoid_classes_with_only_static_members: true
+always_put_required_named_parameters_first: true
+annotate_overrides: true
+avoid_returning_null: true
+avoid_positional_boolean_parameters: true
+prefer_interpolation_to_compose_strings: true
+avoid_redundant_async: true
+avoid_function_literals_in_foreach_calls: true
+avoid_init_to_null: true
+prefer_is_empty: true
+prefer_is_not_empty: true
+avoid_null_checks_in_equality_operators: true
+avoid_renaming_method_parameters: true
+avoid_slow_async_io: true
+avoid_unnecessary_setstate: true
+prefer_final_in_for_each: true
+prefer_iterable_whereType: true
+avoid_unnecessary_else: true
+avoid_unnecessary_type_assertions: true
+avoid_void_async: true
+prefer_null_aware_operators: true
+prefer_const_declarations: true
+prefer_relative_imports: true
+avoid_private_typedef_functions: true
