--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,10 @@ dependencies:
   firebase_auth: ^5.5.1
   dartz: ^0.10.1
   flutter_dotenv: ^5.2.1
+  cloud_firestore: ^5.6.7
+  flutter_riverpod: ^2.6.1
+  device_preview: ^1.2.0
+  persistent_bottom_nav_bar: ^6.2.1
 
 dev_dependencies:
   flutter_test:
@@ -32,6 +36,7 @@ dev_dependencies:
 
   flutter_lints: ^5.0.0
   mockito: ^5.4.5
+ 
 
 flutter:
   uses-material-design: true
