--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -8,7 +8,7 @@
 PRODUCT_NAME = e_commerce
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = org.Maheresio.eCommerce
+PRODUCT_BUNDLE_IDENTIFIER = com.example.eCommerce
 
 // The copyright displayed in application information
-PRODUCT_COPYRIGHT = Copyright © 2025 org.Maheresio. All rights reserved.
+PRODUCT_COPYRIGHT = Copyright © 2025 com.example. All rights reserved.
