--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -89,11 +89,11 @@ BEGIN
     BEGIN
         BLOCK "040904e4"
         BEGIN
-            VALUE "CompanyName", "org.Maheresio" "\0"
+            VALUE "CompanyName", "com.example" "\0"
             VALUE "FileDescription", "e_commerce" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
             VALUE "InternalName", "e_commerce" "\0"
-            VALUE "LegalCopyright", "Copyright (C) 2025 org.Maheresio. All rights reserved." "\0"
+            VALUE "LegalCopyright", "Copyright (C) 2025 com.example. All rights reserved." "\0"
             VALUE "OriginalFilename", "e_commerce.exe" "\0"
             VALUE "ProductName", "e_commerce" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
