add the required packages like  flutter _hooks, dio, lottie, image_picker, path_provider, crop_image, supabase_flutter, lottie

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,8 +16,8 @@ dependencies:
   flutter_screenutil: ^5.9.3
   get_it: ^8.0.3
   google_fonts: ^6.2.1
-  flutter_bloc: ^9.1.0
-  bloc: ^9.0.0
+  flutter_bloc: ^8.0.1
+  bloc: ^8.0.3
   equatable: ^2.0.7
   flutter_svg: ^2.0.17
   font_awesome_flutter: ^10.8.0
@@ -30,6 +30,13 @@ dependencies:
   device_preview: ^1.2.0
   persistent_bottom_nav_bar: ^6.2.1
   carousel_slider: ^5.0.0
+  image_picker: ^1.1.2
+  lottie: ^3.3.1
+  supabase_flutter: ^2.9.0
+  path_provider: ^2.1.5
+  crop_image: ^1.0.16
+  dio: ^5.8.0+1
+  flutter_hooks: ^0.21.2
 
 dev_dependencies:
   flutter_test:
@@ -45,6 +52,7 @@ flutter:
   assets:
     - assets/svg/
     - assets/images/
+    - assets/lotties/
     - .env
 
   fonts:
